--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,13 @@
 version: 1.0.{build}
-os: Visual Studio 2015 CTP 6
+os: Visual Studio 2015
 configuration: Release
 platform: Any CPU
 install:
-- set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
+- cmd: set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
+nuget:
+  project_feed: true
 before_build:
-- nuget restore Sources/VKSharp/VKSharp.sln
+- cmd: nuget restore Sources/kasthack.vksharp.sln
 build:
   parallel: true
-  verbosity: minimal
+  verbosity: normal
