--- a/Sources/kasthack.vksharp/kasthack.vksharp.csproj
+++ b/Sources/kasthack.vksharp/kasthack.vksharp.csproj
@@ -115,11 +115,11 @@
     <Compile Include="DataTypes\EntityFragments\StandInLife.cs" />
     <Compile Include="DataTypes\Enums\AccessType.cs" />
     <Compile Include="DataTypes\Enums\AddFriendResult.cs" />
-    <Compile Include="DataTypes\Enums\AttachmentType.cs" />
+    <Compile Include="DataTypes\Enums\ContentType.cs" />
     <Compile Include="DataTypes\Enums\Attitude.cs" />
     <Compile Include="DataTypes\Enums\AudioGenre.cs" />
     <Compile Include="DataTypes\Enums\AudioSortOrder.cs" />
-    <Compile Include="DataTypes\ContentId.cs" />
+    <Compile Include="DataTypes\ObjectContentId.cs" />
     <Compile Include="DataTypes\Enums\ComplaintType.cs" />
     <Compile Include="DataTypes\Enums\CounterFields.cs" />
     <Compile Include="DataTypes\Enums\Deleted.cs" />
@@ -174,6 +174,8 @@
     <Compile Include="DataTypes\ResponseEntities\GroupManager.cs" />
     <Compile Include="DataTypes\ResponseEntities\LastActivity.cs" />
     <Compile Include="DataTypes\ResponseEntities\NameRequest.cs" />
+    <Compile Include="DataTypes\ResponseEntities\NewsfeedBan.cs" />
+    <Compile Include="DataTypes\ResponseEntities\NewsfeedBannedExtended.cs" />
     <Compile Include="DataTypes\ResponseEntities\PhotosUploadServer.cs" />
     <Compile Include="DataTypes\ResponseEntities\RepostInfo.cs" />
     <Compile Include="DataTypes\ResponseEntities\SaveProfileInfo.cs" />
