--- a/Sources/kasthack.vksharp/kasthack.vksharp.nuspec
+++ b/Sources/kasthack.vksharp/kasthack.vksharp.nuspec
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
-    <copyright>Copyright kasthack 2014</copyright>
+    <copyright>Copyright kasthack 2014-2015</copyright>
     <tags>vk api kasthack</tags>
   </metadata>
 </package>
