--- a/nuget/kasthack.vksharp.nuspec
+++ b/nuget/kasthack.vksharp.nuspec
@@ -2,7 +2,7 @@
 <package >
     <metadata>
         <id>kasthack.vksharp</id>
-        <version>0.7.2.0</version>
+        <version>0.7.3.0</version>
         <title>kasthack.vksharp</title>
         <authors>kasthack</authors>
         <owners>kasthack</owners>
@@ -15,15 +15,15 @@
         <tags>vk api kasthack</tags>
         <dependencies>
             <group targetFramework="net40">
-                <dependency id="Newtonsoft.Json" />
-                <dependency id="Microsoft.Net.Http" />
-                <dependency id="Microsoft.Bcl.Async" />
+                <dependency id="Newtonsoft.Json" version="7.0.1"/>
+                <dependency id="Microsoft.Net.Http" version="2.2.29" />
+                <dependency id="Microsoft.Bcl.Async" version="1.0.168" />
             </group>
             <group targetFramework="net45">
-                <dependency id="Newtonsoft.Json" />
+                <dependency id="Newtonsoft.Json"  version="7.0.1"/>
             </group>
             <group targetFramework="net46">
-                <dependency id="Newtonsoft.Json" />
+                <dependency id="Newtonsoft.Json"  version="7.0.1"/>
             </group>
         </dependencies>
     </metadata>
