--- a/nuget/kasthack.vksharp.nuspec
+++ b/nuget/kasthack.vksharp.nuspec
@@ -2,7 +2,7 @@
 <package >
     <metadata>
         <id>kasthack.vksharp</id>
-        <version>0.7.3.0</version>
+        <version>0.7.3.1</version>
         <title>kasthack.vksharp</title>
         <authors>kasthack</authors>
         <owners>kasthack</owners>
@@ -12,7 +12,7 @@
         <description>Managed VK.com API wrapper</description>
         <releaseNotes></releaseNotes>
         <copyright>Copyright kasthack 2014-2015</copyright>
-        <tags>vk api kasthack</tags>
+        <tags>vk vk.com vkontakte Вконтакте vk api vksharp vknet kasthack kasthack.vksharp</tags>
         <dependencies>
             <group targetFramework="net40">
                 <dependency id="Newtonsoft.Json" version="7.0.1"/>
