--- a/Sources/kasthack.vksharp/4.0/kasthack.vksharp.4.0.csproj
+++ b/Sources/kasthack.vksharp/4.0/kasthack.vksharp.4.0.csproj
@@ -33,7 +33,7 @@
     <DocumentationFile>..\..\..\nuget\build\lib\net40\kasthack.vksharp.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>..\Shared\favicon.ico</ApplicationIcon>
+    <ApplicationIcon>..\..\..\icon\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
