--- a/Sources/kasthack.vksharp/Shared/kasthack.vksharp.csproj
+++ b/Sources/kasthack.vksharp/Shared/kasthack.vksharp.csproj
@@ -33,7 +33,7 @@
     <DocumentationFile>bin\Release\kasthack.vksharp.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <ApplicationIcon>..\..\..\icon\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
