--- a/Sources/kasthack.vksharp/4.6/kasthack.vksharp.4.6.csproj
+++ b/Sources/kasthack.vksharp/4.6/kasthack.vksharp.4.6.csproj
@@ -31,6 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>0</WarningLevel>
     <DocumentationFile>..\..\..\nuget\build\lib\net46\kasthack.vksharp.XML</DocumentationFile>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>..\..\..\icon\icon.ico</ApplicationIcon>
