--- a/Sources/kasthack.vksharp/4.0/kasthack.vksharp.4.0.csproj
+++ b/Sources/kasthack.vksharp/4.0/kasthack.vksharp.4.0.csproj
@@ -92,7 +92,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Shared\**\*.cs"/>
+    <Compile Include="..\Shared\DataTypes\**\*.cs"/>
+    <Compile Include="..\Shared\Generated\**\*.cs"/>
+    <Compile Include="..\Shared\Implementation\**\*.cs"/>
+    <Compile Include="..\Shared\Internal\**\*.cs"/>
+    <Compile Include="..\Shared\Util\**\*.cs"/>
+    <Compile Include="..\Shared\*.cs"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Shared\favicon.ico" />
