--- a/Sources/kasthack.vksharp/4.6/kasthack.vksharp.4.6.csproj
+++ b/Sources/kasthack.vksharp/4.6/kasthack.vksharp.4.6.csproj
@@ -37,8 +37,8 @@
     <ApplicationIcon>..\..\..\icon\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -52,12 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Shared\DataTypes\**\*.cs"/>
-    <Compile Include="..\Shared\Generated\**\*.cs"/>
-    <Compile Include="..\Shared\Implementation\**\*.cs"/>
-    <Compile Include="..\Shared\Internal\**\*.cs"/>
-    <Compile Include="..\Shared\Util\**\*.cs"/>
-    <Compile Include="..\Shared\*.cs"/>
+    <Compile Include="..\Shared\DataTypes\**\*.cs" />
+    <Compile Include="..\Shared\Generated\Api.cs" />
+    <Compile Include="..\Shared\Generated\RawApi.cs" />
+    <Compile Include="..\Shared\Generated\RequestApi1.cs" />
+    <Compile Include="..\Shared\Generated\SharedFuncs.cs" />
+    <Compile Include="..\Shared\Implementation\**\*.cs" />
+    <Compile Include="..\Shared\Internal\**\*.cs" />
+    <Compile Include="..\Shared\Util\**\*.cs" />
+    <Compile Include="..\Shared\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Shared\favicon.ico" />
